--- a/ProyectoIntegrador/src/index.html
+++ b/ProyectoIntegrador/src/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ProyectoIntegrador</title>
+  <title>Proyectointegrador</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <h1>Bienvenidos!
-  
-  </h1>
   <app-root></app-root>
 </body>
 </html>
